@@ -1,3 +1,8 @@
+1999-07-31  Scott Redman  <redman@scriptics.com>
+
+	* xlib/X11/Xlib.h: Remove XFillRectangle since it is now in the
+	stub tables.
+
 1999-07-30  Jeff Hobbs  <hobbs@scriptics.com>
 
 	* tkInt.decls: Added stub entry for XFillRectangle [Bug: 2446]
